--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server {
 
 
     location ~ \.php$ {
-        fastcgi_pass ec2-user-php-fpm-1:9000;
+        fastcgi_pass (php-server-private-ip):9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME /var/www/html/$fastcgi_script_name;
         include fastcgi_params;
