--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,7 @@ server {
 
 
     location ~ \.php$ {
-        fastcgi_pass (php-server-private-ip):9000;
+        proxy_pass http://internal-load-balancer-internal-1237126681.us-east-1.elb.amazonaws.com:80;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME /var/www/html/$fastcgi_script_name;
         include fastcgi_params;
